Aboutme, Contact Info, Header HTML Updates

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <article class="information">
         <article class="about-me">
             <h2>About Me</h2>
-            <p>Paragrapgh about me</p>
+            <p>Originally from Bridgeport, Connecticut, I currently live in Florida where I also attended Rollins College, receiving a Bachelor’s degree in International Business along with a German minor. I have been able to gain experience in a plethora of different sectors including banking, hospitality, and construction sectors before my current role with Diamond Prospect Media as a Director of Operations and central Florida area scout. My wins with DPM included raising Youtube viewership and subscriptions by 250%, while also being able to hone and develop my skills interpersonal communication, leadership, emotional intelligence, attention to detail through being the lead on different projects and company events. If granted the opportunity to work with your team, I look forward to employing those same skills and developing them even further. </p>
         </article>
         <article class="portfolio">
             <h2>Portfolio</h2>
