MVP header and footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Sample Portfolio</title>
 </head>
 <body>
@@ -39,15 +39,15 @@
         </article>
         <article class="resume">
             <h2>Resume</h2>
-            <img src="./assets/images/search-engine-optimization.jpg" class="resume-pic"/>
+            <img src="./assets/images/resume.jpg" class="resume-pic"/>
         </article>
     </article>
     <footer class="footer">
         <h2>Contact Info</h2>
         <p>123-456-7890</p> 
         <p>kennedyhayles@gmail.com</p>
-        <p><a href="https://github.com/kennedyisn">Github</a</p> 
-        <p><a href="www.linkedin.com/in/kennedy-hayles-29a17a16a">LinkedIn</a></p>
+        <p><a href="https://github.com/kennedyisn">Github</a></p> 
+        <p><a href="https://www.linkedin.com/in/kennedy-hayles-29a17a16a">LinkedIn</a></p>
     </footer>
 </body>
 </html>
