MVP portfolio and new images

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             </ul>
         </div>
     </header>
-    <!-- Border goes here -->
     <article class="information">
         <article class="about-me">
             <h2>About Me</h2>
@@ -35,7 +34,9 @@
         </article>
         <article class="portfolio">
             <h2>Portfolio</h2>
-            
+            <div class="portfolio-photos">
+                <img src="./assets/images/Horiseon.png"/>
+            </div>
         </article>
         <article class="resume">
             <h2>Resume</h2>
