application screenshot and embedded image clean up

--- a/index.html
+++ b/index.html
@@ -35,12 +35,24 @@
         <article class="portfolio">
             <h2>Portfolio</h2>
             <div class="portfolio-photos">
-                <img src="./assets/images/Horiseon.png"/>
+                <a href="https://kennedyisn.github.io/Module-1-Challenge/"><img src="./assets/images/Horiseon.png"/></a> 
+            </div>
+            <div class="portfolio-photos">
+                <img src="./assets/images/Big-project.jpg"/>
+            </div>
+            <div class="portfolio-photos">
+                <img src="./assets/images/Daria.jpg"/>
+            </div>
+            <div class="portfolio-photos">
+                <img src="./assets/images/Placeholder.jpg"/>
+            </div>
+            <div class="portfolio-photos">
+                <img src="./assets/images/sketch.jpg"/>
             </div>
         </article>
         <article class="resume">
             <h2>Resume</h2>
-            <img src="./assets/images/resume.jpg" class="resume-pic"/>
+            <a href="https://www.linkedin.com/in/kennedy-hayles-29a17a16a"><img src="./assets/images/resume.jpg" class="resume-pic"/></a> 
         </article>
     </article>
     <footer class="footer">
