--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://kennedyisn.github.io/Module-1-Challenge/"><img src="./assets/images/Horiseon.png"/></a> 
             </div>
             <div class="portfolio-photos">
-                <img src="./assets/images/Big-project.jpg"/>
+                <a href="https://breweries-reviews.herokuapp.com/"><img src="./assets/images/Big-project.jpg"/>
             </div>
             <div class="portfolio-photos">
                 <img src="./assets/images/Daria.jpg"/>
