--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="https://breweries-reviews.herokuapp.com/"><img src="./assets/images/Big-project.jpg"/>
             </div>
             <div class="portfolio-photos">
-                <img src="./assets/images/Daria.jpg"/>
+                <a href="https://github.com/danielgregoire34/perfect-parlay"><img src="./assets/images/Daria.jpg"/>
             </div>
             <div class="portfolio-photos">
                 <img src="./assets/images/Placeholder.jpg"/>
