--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="https://github.com/danielgregoire34/perfect-parlay"><img src="./assets/images/Daria.jpg"/>
             </div>
             <div class="portfolio-photos">
-                <img src="./assets/images/Placeholder.jpg"/>
+                <a href="https://breweries-reviews.herokuapp.com/"><img src="./assets/images/Placeholder.jpg"/></a>
             </div>
             <div class="portfolio-photos">
                 <img src="./assets/images/sketch.jpg"/>
@@ -52,7 +52,7 @@
         </article>
         <article class="resume">
             <h2>Resume</h2>
-            <a href="https://www.linkedin.com/in/kennedy-hayles-29a17a16a"><img src="./assets/images/resume.jpg" class="resume-pic"/></a> 
+            <a href="https://docs.google.com/document/d/18b9ExkIGWuLXXzRDmDG--eGxlje-azLMqUuVDaZ7ewI/edit?usp=sharing"><img src="./assets/images/resume.jpg" class="resume-pic"/></a> 
         </article>
     </article>
     <footer class="footer">
