--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
         <article class="portfolio">
             <h2>Portfolio</h2>
             <div class="portfolio-photos">
-                <a href="https://kennedyisn.github.io/Module-1-Challenge/"><img src="assets/images/Horiseon.png"/></a> 
+                <a href="https://kennedyisn.github.io/Module-1-Challenge/"><img src="images/Horiseon.png"/></a> 
             </div>
             <div class="portfolio-photos">
-                <a href="https://breweries-reviews.herokuapp.com/"><img src="assets/images/Big-project.jpg"/></a>
+                <a href="https://breweries-reviews.herokuapp.com/"><img src="images/Big-project.jpg"/></a>
             </div>
             <div class="portfolio-photos">
-                <a href="https://github.com/danielgregoire34/perfect-parlay"><img src="assets/images/Daria.jpg"/></a>
+                <a href="https://github.com/danielgregoire34/perfect-parlay"><img src="images/Daria.jpg"/></a>
             </div>
             <div class="portfolio-photos">
-                <a href="https://breweries-reviews.herokuapp.com/"><img src="assets/images/Placeholder.jpg"/></a>
+                <a href="https://breweries-reviews.herokuapp.com/"><img src="images/Placeholder.jpg"/></a>
             </div>
             <div class="portfolio-photos">
-                <img src="assets/images/sketch.jpg"/>
+                <img src="images/sketch.jpg"/>
             </div>
         </article>
         <article class="resume">
             <h2>Resume</h2>
-            <a href="https://docs.google.com/document/d/18b9ExkIGWuLXXzRDmDG--eGxlje-azLMqUuVDaZ7ewI/edit?usp=sharing"><img src="assets/images/resume.jpg" class="resume-pic"/></a> 
+            <a href="https://docs.google.com/document/d/18b9ExkIGWuLXXzRDmDG--eGxlje-azLMqUuVDaZ7ewI/edit?usp=sharing"><img src="images/resume.jpg" class="resume-pic"/></a> 
         </article>
     </article>
     <footer class="footer">
